--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             position: absolute;
             color: white;
             font-size: 20px;
-            animation: snowfall linear infinite;
+            animation: rainfall linear infinite;
         }
         
         @keyframes rainfall {
